# claude-smart-compact

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: lib  pre_compact.py  user_prompt.py
.claude/hooks/lib/: transcript.py
cc_compact/: __init__.py  pre_compact.py  user_prompt.py
cc_compact/lib/: core.py  memory.py  transcript.py
claude_smart_compact/: __init__.py  cli.py  pre_compact.py  user_prompt.py
claude_smart_compact.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
claude_smart_compact/lib/: core.py  hook_runner.py  memory.py  transcript.py
docs/superpowers/plans/: 2026-04-18-claude-smart-compact.md
docs/superpowers/specs/: 2026-04-18-claude-smart-compact-design.md
hooks/: user_prompt.py
hooks/lib/: core.py  memory.py  transcript.py
tests/: conftest.py  test_cli.py  test_core.py  test_edge_cases.py  test_large_session_compact.py  test_memory.py  test_plugin_install_e2e.py  test_pre_compact.py  test_pre_compact_inproc.py  test_transcript.py  test_user_prompt.py  test_user_prompt_inproc.py  trace_run.py
tests/fixtures/: transcript_corrupt_lines.jsonl  transcript_multi_user_turns.jsonl  transcript_no_user.jsonl  transcript_real_cli_format.jsonl  transcript_with_todos.jsonl
