[project]
name = "claude-smart-compact"
version = "0.1.0"
description = "Claude Code hooks that preserve memory across auto-compaction"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
